[package]
name = "Ants_search"
version = "0.1.0"
authors = ["Kislalex <kislalex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.34.5"
lazy_static = "1.4.0"
rand = "0.8.3"
ndarray-parallel = "0.9.1"
rayon = "1.5.0"
ndarray = {version = "0.15.1", features = ["rayon"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
